<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/widget_story_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/dicoding"
        android:contentDescription="@string/story_image"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/widget_story_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dicoding_story"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/widget_story_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/short_description"
            android:textSize="14sp"
            android:textColor="#666666"
            android:maxLines="2"
            android:ellipsize="end"/>
    </LinearLayout>
</LinearLayout>
