<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.story.StoryDetailActivity">

    <ImageView
        android:id="@+id/tv_detail_photo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_story"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/story_name"
        android:textSize="22sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textColor="#333333"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/tv_detail_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/story_description"
        android:textSize="16sp"
        android:textColor="#454444"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tv_detail_createdAt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/created_at"
        android:textSize="14sp"
        android:textColor="#888888"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
